fixed the overflow problem on all pages

--- a/CSS/alu.css
+++ b/CSS/alu.css
@@ -1,3 +1,6 @@
+:root{
+  overflow-x: hidden;
+}
 body{
   overflow-x: hidden;
 }
